fix changelog and packages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "comments",
     "version": "1.0.0",
-    "publisher": "AlexRed",
+    "publisher": "AlexCoderCorp",
     "engines": {
         "vscode": "^1.12.2"
     },
